--- a/create-pass.html
+++ b/create-pass.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <title>Rocket.Q</title>
+    <title>Criar Sala - Rocket.Q</title>
     <link rel="icon" href="assets/icon.svg" />
   </head>
 
@@ -35,28 +35,19 @@
       <main>
         <div class="container">
           <section>
-            <h2>Entre como participante</h2>
+            <h2>Crie sua própria sala</h2>
             <form action="#">
-              <label for-id="room-id" class="sr-only">Código da sala</label>
-              <input type="number" id="room-id" placeholder="Código da sala" />
+              <label for="room-pass" class="sr-only">Insira uma senha</label>
+              <input
+                type="password"
+                id="room-pass"
+                placeholder="Insira uma senha"
+              />
               <button>
-                <img src="assets/enter-room.svg" alt="Entrar na sala" />
-                Entrar na sala
+                <img src="assets/users1.svg" alt="Entrar na sala" />
+                Criar sala
               </button>
             </form>
-          </section>
-
-          <div class="separator">
-            <div></div>
-            <div>ou</div>
-            <div></div>
-          </div>
-
-          <section>
-            <h2>Crie sua própria sala, de forma fácil</h2>
-            <a href="create-pass.html" class="button outlined"
-              ><img src="assets/users.svg" alt="" />Criar sala</a
-            >
           </section>
         </div>
       </main>
