--- a/room.html
+++ b/room.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/room.css" />
+    <link rel="stylesheet" href="styles/modal.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,11 +32,11 @@
         <div class="buttons">
           <div class="button outlined">
             #323243
-            <img src="assets/copy.svg" alt="">
+            <img src="assets/copy.svg" alt="" />
           </div>
 
           <a href="#" class="button">
-            <img src="assets/users1.svg" alt="">Criar sala
+            <img src="assets/users1.svg" alt="" />Criar sala
           </a>
         </div>
       </header>
@@ -44,12 +45,19 @@
         <section id="question-form">
           <h2>Faça sua pergunta</h2>
           <form action="#">
-            <label for-id="question" class="sr-only">O que você quer perguntar?</label>
-            <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
+            <label for-id="question" class="sr-only"
+              >O que você quer perguntar?</label
+            >
+            <textarea
+              name="question"
+              id="question"
+              placeholder="O que você quer perguntar?"
+            ></textarea>
 
             <footer>
               <div>
-                <img src="assets/lock.svg" alt="Cadeado">Esta pergunta é anônima
+                <img src="assets/lock.svg" alt="Cadeado" />Esta pergunta é
+                anônima
               </div>
               <button>Enviar</button>
             </footer>
@@ -62,27 +70,99 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="assets/avatar.svg" alt="Avatar">
+                  <img src="assets/user.svg" alt="Avatar" />
                 </div>
-
                 <div class="question">
                   <p>Qual a diferença entre const, var e let no JavaScript?</p>
                 </div>
               </div>
-
               <div class="actions">
                 <a href="#" class="check">
-                  <img src="assets/check.svg" alt="Marcor como lida"> Marcar como lida
+                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                  como lida
                 </a>
                 <a href="#" class="delete">
-                  <img src="assets/trash.svg" alt="Excluir"> Excluir
+                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
+                </a>
+              </div>
+            </div>
+
+            <div class="question-wrapper">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/user.svg" alt="Avatar" />
+                </div>
+                <div class="question">
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Nesciunt ipsa exercitationem corporis fugiat nobis. Eos,
+                    quisquam dolor facilis asperiores neque officiis officia non
+                    commodi eum, reiciendis nulla vero. Pariatur, veritatis!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Nesciunt ipsa exercitationem corporis fugiat nobis. Eos,
+                    quisquam dolor facilis asperiores neque officiis officia non
+                    commodi eum, reiciendis nulla vero. Pariatur, veritatis!
+                  </p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                  como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
+                </a>
+              </div>
+            </div>
+
+            <div class="question-wrapper read">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/user.svg" alt="Avatar" />
+                </div>
+                <div class="question">
+                  <p>O que é JavaScript?</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                  como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
           </div>
-
         </section>
       </main>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal-wrapper active">
+      <div class="modal">
+        <h2>Excluir pergunta</h2>
+        <p>Tem certeza que você deseja excluir esta pergunta</p>
+
+        <form action="#">
+          <label for-id="password" class="sr-only"
+            >Digite sua senha admin</label
+          >
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Digite sua senha"
+          />
+
+          <div class="buttons">
+            <div class="button grey">Cancelar</div>
+            <button class="button red">Sim, excluir</button>
+          </div>
+        </form>
+      </div>
     </div>
   </body>
 </html>
