--- a/htmls/room.html
+++ b/htmls/room.html
@@ -141,7 +141,7 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal-wrapper active">
+    <div class="modal-wrapper">
       <div class="modal">
         <h2>Excluir pergunta</h2>
         <p>Tem certeza que você deseja excluir esta pergunta</p>
